name: AdventOfCode2017
version: 1.0
cabal-version: 1.22
build-type: Simple
license: AllRightsReserved
stability: experimental
data-files:
    day5.txt
    day20.txt
    day9.txt
    day11.txt
    day2.txt
    day7.txt
    day16.txt
    day18.txt
    day13.txt
    day22.txt
    day19.txt
    day6.txt
    day12.txt
    day8.txt
    day4.txt
    day21.txt
x-ghc-framework-version: 8.0.2-8.9-3
x-last-ide-version: HfM1.5.1
Executable AdventOfCode2017
  main-is: Day1.hs
  buildable: True
  build-depends:
      mtl -any,
      array -any,
      split -any,
      vector -any,
      base -any,
      attoparsec -any,
      parsec -any,
      containers -any
  default-language: Haskell2010
  other-modules:
      Day20
      Day5
      Day19
      Day16
      Day12
      Day11
      Day15
      Day17b
      Day22
      Day14
      Day4
      Day2
      Day8
      Day18b
      Day6
      Day21
      Day18
      Day7
      Day9
      Day13
      Day10
      Day17
      Day3
